Assignment 4/Divyansh/150010041-150050029/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> block_list
Rule 2     block_list -> basic_block block_list
Rule 3     block_list -> basic_block
Rule 4     basic_block -> declaration
Rule 5     basic_block -> function
Rule 6     basic_block -> function_prototype
Rule 7     function -> TYPE var seen_FM LPAREN parameter_list RPAREN function_body
Rule 8     function -> VOID NAME seen_FM LPAREN parameter_list RPAREN function_body
Rule 9     function -> TYPE var seen_FM LPAREN RPAREN function_body
Rule 10    function -> VOID NAME seen_FM LPAREN RPAREN function_body
Rule 11    function -> VOID MAIN seen_FM LPAREN RPAREN function_body
Rule 12    seen_FM -> <empty>
Rule 13    function_prototype -> TYPE var seen_FM LPAREN parameter_list RPAREN SEMICOLON
Rule 14    function_prototype -> TYPE var seen_FM LPAREN RPAREN SEMICOLON
Rule 15    function_prototype -> VOID NAME seen_FM LPAREN parameter_list RPAREN SEMICOLON
Rule 16    function_prototype -> VOID NAME seen_FM LPAREN RPAREN SEMICOLON
Rule 17    parameter_list -> TYPE var COMMA parameter_list
Rule 18    parameter_list -> TYPE var
Rule 19    TYPE -> INT
Rule 20    TYPE -> FLOAT
Rule 21    function_body -> LCURLY stmt_list return_stmt RCURLY
Rule 22    function_body -> LCURLY return_stmt RCURLY
Rule 23    function_body -> body
Rule 24    return_stmt -> RETURN SEMICOLON
Rule 25    return_stmt -> RETURN R2 SEMICOLON
Rule 26    body -> LCURLY stmt_list RCURLY
Rule 27    body -> LCURLY RCURLY
Rule 28    stmt_list -> stmt stmt_list
Rule 29    stmt_list -> stmt
Rule 30    stmt -> matched_stmt
Rule 31    stmt -> unmatched_stmt
Rule 32    matched_stmt -> assign
Rule 33    matched_stmt -> declaration
Rule 34    matched_stmt -> matched_decision
Rule 35    matched_stmt -> matched_loop
Rule 36    matched_stmt -> function_call SEMICOLON
Rule 37    unmatched_stmt -> unmatched_decision
Rule 38    unmatched_stmt -> unmatched_loop
Rule 39    assign -> L1 EQUALS R1 SEMICOLON
Rule 40    assign -> L2 EQUALS R2 SEMICOLON
Rule 41    L1 -> NAME
Rule 42    R1 -> R1 PLUS ALLNUM
Rule 43    R1 -> R1 MINUS ALLNUM
Rule 44    R1 -> R1 STAR ALLNUM
Rule 45    R1 -> R1 DIVIDE ALLNUM
Rule 46    R1 -> ALLNUM PLUS R1
Rule 47    R1 -> ALLNUM MINUS R1
Rule 48    R1 -> ALLNUM STAR R1
Rule 49    R1 -> ALLNUM DIVIDE R1
Rule 50    R1 -> R1 PLUS R1
Rule 51    R1 -> R1 MINUS R1
Rule 52    R1 -> R1 STAR R1
Rule 53    R1 -> R1 DIVIDE R1
Rule 54    R1 -> LPAREN R1 RPAREN
Rule 55    R1 -> MINUS R1
Rule 56    R1 -> PName
Rule 57    R1 -> function_call
Rule 58    R1 -> NAME
Rule 59    ALLNUM -> NUMBER
Rule 60    ALLNUM -> MINUS ALLNUM
Rule 61    L2 -> STAR L2
Rule 62    L2 -> STAR NAME
Rule 63    R2 -> R2 PLUS R2
Rule 64    R2 -> R2 MINUS R2
Rule 65    R2 -> R2 STAR R2
Rule 66    R2 -> R2 DIVIDE R2
Rule 67    R2 -> LPAREN R2 RPAREN
Rule 68    R2 -> MINUS R2
Rule 69    R2 -> PName
Rule 70    R2 -> function_call
Rule 71    R2 -> NAME
Rule 72    R2 -> NUMBER
Rule 73    PName -> STAR PName
Rule 74    PName -> STAR NAME
Rule 75    PName -> AMPERSAND NAME
Rule 76    function_call -> NAME LPAREN arg_list RPAREN
Rule 77    function_call -> NAME LPAREN RPAREN
Rule 78    arg_list -> R2 COMMA arg_list
Rule 79    arg_list -> R2
Rule 80    declaration -> TYPE varlist SEMICOLON
Rule 81    varlist -> var COMMA varlist
Rule 82    varlist -> var
Rule 83    var -> STAR var
Rule 84    var -> NAME
Rule 85    matched_loop -> WHILE LPAREN condition RPAREN matched_stmt
Rule 86    matched_loop -> WHILE LPAREN condition RPAREN body
Rule 87    matched_loop -> WHILE LPAREN condition RPAREN SEMICOLON
Rule 88    unmatched_loop -> WHILE LPAREN condition RPAREN unmatched_stmt
Rule 89    condition -> condition AND condition
Rule 90    condition -> condition OR condition
Rule 91    condition -> LPAREN condition RPAREN
Rule 92    condition -> NOT condition
Rule 93    condition -> R2 GT R2
Rule 94    condition -> R2 LT R2
Rule 95    condition -> R2 GE R2
Rule 96    condition -> R2 LE R2
Rule 97    condition -> R2 EQ R2
Rule 98    condition -> R2 NE R2
Rule 99    matched_decision -> IF LPAREN condition RPAREN matched_stmt ELSE matched_stmt
Rule 100   matched_decision -> IF LPAREN condition RPAREN matched_stmt ELSE body
Rule 101   matched_decision -> IF LPAREN condition RPAREN body ELSE matched_stmt
Rule 102   matched_decision -> IF LPAREN condition RPAREN body ELSE body
Rule 103   matched_decision -> IF LPAREN condition RPAREN matched_stmt ELSE SEMICOLON
Rule 104   matched_decision -> IF LPAREN condition RPAREN body ELSE SEMICOLON
Rule 105   matched_decision -> IF LPAREN condition RPAREN SEMICOLON ELSE matched_stmt
Rule 106   matched_decision -> IF LPAREN condition RPAREN SEMICOLON ELSE body
Rule 107   matched_decision -> IF LPAREN condition RPAREN SEMICOLON ELSE SEMICOLON
Rule 108   unmatched_decision -> IF LPAREN condition RPAREN stmt
Rule 109   unmatched_decision -> IF LPAREN condition RPAREN body
Rule 110   unmatched_decision -> IF LPAREN condition RPAREN SEMICOLON
Rule 111   unmatched_decision -> IF LPAREN condition RPAREN matched_stmt ELSE unmatched_stmt
Rule 112   unmatched_decision -> IF LPAREN condition RPAREN body ELSE unmatched_stmt
Rule 113   unmatched_decision -> IF LPAREN condition RPAREN SEMICOLON ELSE unmatched_stmt

Terminals, with rules where they appear

AMPERSAND            : 75
AND                  : 89
COMMA                : 17 78 81
DIVIDE               : 45 49 53 66
ELSE                 : 99 100 101 102 103 104 105 106 107 111 112 113
EQ                   : 97
EQUALS               : 39 40
FLOAT                : 20
GE                   : 95
GT                   : 93
IF                   : 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113
INT                  : 19
LCURLY               : 21 22 26 27
LE                   : 96
LPAREN               : 7 8 9 10 11 13 14 15 16 54 67 76 77 85 86 87 88 91 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113
LT                   : 94
MAIN                 : 11
MINUS                : 43 47 51 55 60 64 68
NAME                 : 8 10 15 16 41 58 62 71 74 75 76 77 84
NE                   : 98
NOT                  : 92
NUMBER               : 59 72
OR                   : 90
PLUS                 : 42 46 50 63
RCURLY               : 21 22 26 27
RETURN               : 24 25
RPAREN               : 7 8 9 10 11 13 14 15 16 54 67 76 77 85 86 87 88 91 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113
SEMICOLON            : 13 14 15 16 24 25 36 39 40 80 87 103 104 105 106 107 107 110 113
STAR                 : 44 48 52 61 62 65 73 74 83
VOID                 : 8 10 11 15 16
WHILE                : 85 86 87 88
error                : 

Nonterminals, with rules where they appear

ALLNUM               : 42 43 44 45 46 47 48 49 60
L1                   : 39
L2                   : 40 61
PName                : 56 69 73
R1                   : 39 42 43 44 45 46 47 48 49 50 50 51 51 52 52 53 53 54 55
R2                   : 25 40 63 63 64 64 65 65 66 66 67 68 78 79 93 93 94 94 95 95 96 96 97 97 98 98
TYPE                 : 7 9 13 14 17 18 80
arg_list             : 76 78
assign               : 32
basic_block          : 2 3
block_list           : 1 2
body                 : 23 86 100 101 102 102 104 106 109 112
condition            : 85 86 87 88 89 89 90 90 91 92 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113
declaration          : 4 33
function             : 5
function_body        : 7 8 9 10 11
function_call        : 36 57 70
function_prototype   : 6
matched_decision     : 34
matched_loop         : 35
matched_stmt         : 30 85 99 99 100 101 103 105 111
parameter_list       : 7 8 13 15 17
program              : 0
return_stmt          : 21 22
seen_FM              : 7 8 9 10 11 13 14 15 16
stmt                 : 28 29 108
stmt_list            : 21 26 28
unmatched_decision   : 37
unmatched_loop       : 38
unmatched_stmt       : 31 88 111 112 113
var                  : 7 9 13 14 17 18 81 82 83
varlist              : 80 81

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block_list
    (2) block_list -> . basic_block block_list
    (3) block_list -> . basic_block
    (4) basic_block -> . declaration
    (5) basic_block -> . function
    (6) basic_block -> . function_prototype
    (80) declaration -> . TYPE varlist SEMICOLON
    (7) function -> . TYPE var seen_FM LPAREN parameter_list RPAREN function_body
    (8) function -> . VOID NAME seen_FM LPAREN parameter_list RPAREN function_body
    (9) function -> . TYPE var seen_FM LPAREN RPAREN function_body
    (10) function -> . VOID NAME seen_FM LPAREN RPAREN function_body
    (11) function -> . VOID MAIN seen_FM LPAREN RPAREN function_body
    (13) function_prototype -> . TYPE var seen_FM LPAREN parameter_list RPAREN SEMICOLON
    (14) function_prototype -> . TYPE var seen_FM LPAREN RPAREN SEMICOLON
    (15) function_prototype -> . VOID NAME seen_FM LPAREN parameter_list RPAREN SEMICOLON
    (16) function_prototype -> . VOID NAME seen_FM LPAREN RPAREN SEMICOLON
    (19) TYPE -> . INT
    (20) TYPE -> . FLOAT

    VOID            shift and go to state 6
    INT             shift and go to state 4
    FLOAT           shift and go to state 8

    function                       shift and go to state 1
    TYPE                           shift and go to state 2
    function_prototype             shift and go to state 3
    block_list                     shift and go to state 5
    declaration                    shift and go to state 7
    program                        shift and go to state 9
    basic_block                    shift and go to state 10

state 1

    (5) basic_block -> function .

    VOID            reduce using rule 5 (basic_block -> function .)
    INT             reduce using rule 5 (basic_block -> function .)
    FLOAT           reduce using rule 5 (basic_block -> function .)
    $end            reduce using rule 5 (basic_block -> function .)


state 2

    (80) declaration -> TYPE . varlist SEMICOLON
    (7) function -> TYPE . var seen_FM LPAREN parameter_list RPAREN function_body
    (9) function -> TYPE . var seen_FM LPAREN RPAREN function_body
    (13) function_prototype -> TYPE . var seen_FM LPAREN parameter_list RPAREN SEMICOLON
    (14) function_prototype -> TYPE . var seen_FM LPAREN RPAREN SEMICOLON
    (81) varlist -> . var COMMA varlist
    (82) varlist -> . var
    (83) var -> . STAR var
    (84) var -> . NAME

    STAR            shift and go to state 14
    NAME            shift and go to state 13

    var                            shift and go to state 11
    varlist                        shift and go to state 12

state 3

    (6) basic_block -> function_prototype .

    VOID            reduce using rule 6 (basic_block -> function_prototype .)
    INT             reduce using rule 6 (basic_block -> function_prototype .)
    FLOAT           reduce using rule 6 (basic_block -> function_prototype .)
    $end            reduce using rule 6 (basic_block -> function_prototype .)


state 4

    (19) TYPE -> INT .

    STAR            reduce using rule 19 (TYPE -> INT .)
    NAME            reduce using rule 19 (TYPE -> INT .)


state 5

    (1) program -> block_list .

    $end            reduce using rule 1 (program -> block_list .)


state 6

    (8) function -> VOID . NAME seen_FM LPAREN parameter_list RPAREN function_body
    (10) function -> VOID . NAME seen_FM LPAREN RPAREN function_body
    (11) function -> VOID . MAIN seen_FM LPAREN RPAREN function_body
    (15) function_prototype -> VOID . NAME seen_FM LPAREN parameter_list RPAREN SEMICOLON
    (16) function_prototype -> VOID . NAME seen_FM LPAREN RPAREN SEMICOLON

    NAME            shift and go to state 15
    MAIN            shift and go to state 16


state 7

    (4) basic_block -> declaration .

    VOID            reduce using rule 4 (basic_block -> declaration .)
    INT             reduce using rule 4 (basic_block -> declaration .)
    FLOAT           reduce using rule 4 (basic_block -> declaration .)
    $end            reduce using rule 4 (basic_block -> declaration .)


state 8

    (20) TYPE -> FLOAT .

    STAR            reduce using rule 20 (TYPE -> FLOAT .)
    NAME            reduce using rule 20 (TYPE -> FLOAT .)


state 9

    (0) S' -> program .



state 10

    (2) block_list -> basic_block . block_list
    (3) block_list -> basic_block .
    (2) block_list -> . basic_block block_list
    (3) block_list -> . basic_block
    (4) basic_block -> . declaration
    (5) basic_block -> . function
    (6) basic_block -> . function_prototype
    (80) declaration -> . TYPE varlist SEMICOLON
    (7) function -> . TYPE var seen_FM LPAREN parameter_list RPAREN function_body
    (8) function -> . VOID NAME seen_FM LPAREN parameter_list RPAREN function_body
    (9) function -> . TYPE var seen_FM LPAREN RPAREN function_body
    (10) function -> . VOID NAME seen_FM LPAREN RPAREN function_body
    (11) function -> . VOID MAIN seen_FM LPAREN RPAREN function_body
    (13) function_prototype -> . TYPE var seen_FM LPAREN parameter_list RPAREN SEMICOLON
    (14) function_prototype -> . TYPE var seen_FM LPAREN RPAREN SEMICOLON
    (15) function_prototype -> . VOID NAME seen_FM LPAREN parameter_list RPAREN SEMICOLON
    (16) function_prototype -> . VOID NAME seen_FM LPAREN RPAREN SEMICOLON
    (19) TYPE -> . INT
    (20) TYPE -> . FLOAT

    $end            reduce using rule 3 (block_list -> basic_block .)
    VOID            shift and go to state 6
    INT             shift and go to state 4
    FLOAT           shift and go to state 8

    function                       shift and go to state 1
    declaration                    shift and go to state 7
    basic_block                    shift and go to state 10
    function_prototype             shift and go to state 3
    TYPE                           shift and go to state 2
    block_list                     shift and go to state 17

state 11

    (7) function -> TYPE var . seen_FM LPAREN parameter_list RPAREN function_body
    (9) function -> TYPE var . seen_FM LPAREN RPAREN function_body
    (13) function_prototype -> TYPE var . seen_FM LPAREN parameter_list RPAREN SEMICOLON
    (14) function_prototype -> TYPE var . seen_FM LPAREN RPAREN SEMICOLON
    (81) varlist -> var . COMMA varlist
    (82) varlist -> var .
    (12) seen_FM -> .

    COMMA           shift and go to state 19
    SEMICOLON       reduce using rule 82 (varlist -> var .)
    LPAREN          reduce using rule 12 (seen_FM -> .)

    seen_FM                        shift and go to state 18

state 12

    (80) declaration -> TYPE varlist . SEMICOLON

    SEMICOLON       shift and go to state 20


state 13

    (84) var -> NAME .

    COMMA           reduce using rule 84 (var -> NAME .)
    LPAREN          reduce using rule 84 (var -> NAME .)
    SEMICOLON       reduce using rule 84 (var -> NAME .)
    RPAREN          reduce using rule 84 (var -> NAME .)


state 14

    (83) var -> STAR . var
    (83) var -> . STAR var
    (84) var -> . NAME

    STAR            shift and go to state 14
    NAME            shift and go to state 13

    var                            shift and go to state 21

state 15

    (8) function -> VOID NAME . seen_FM LPAREN parameter_list RPAREN function_body
    (10) function -> VOID NAME . seen_FM LPAREN RPAREN function_body
    (15) function_prototype -> VOID NAME . seen_FM LPAREN parameter_list RPAREN SEMICOLON
    (16) function_prototype -> VOID NAME . seen_FM LPAREN RPAREN SEMICOLON
    (12) seen_FM -> .

    LPAREN          reduce using rule 12 (seen_FM -> .)

    seen_FM                        shift and go to state 22

state 16

    (11) function -> VOID MAIN . seen_FM LPAREN RPAREN function_body
    (12) seen_FM -> .

    LPAREN          reduce using rule 12 (seen_FM -> .)

    seen_FM                        shift and go to state 23

state 17

    (2) block_list -> basic_block block_list .

    $end            reduce using rule 2 (block_list -> basic_block block_list .)


state 18

    (7) function -> TYPE var seen_FM . LPAREN parameter_list RPAREN function_body
    (9) function -> TYPE var seen_FM . LPAREN RPAREN function_body
    (13) function_prototype -> TYPE var seen_FM . LPAREN parameter_list RPAREN SEMICOLON
    (14) function_prototype -> TYPE var seen_FM . LPAREN RPAREN SEMICOLON

    LPAREN          shift and go to state 24


state 19

    (81) varlist -> var COMMA . varlist
    (81) varlist -> . var COMMA varlist
    (82) varlist -> . var
    (83) var -> . STAR var
    (84) var -> . NAME

    STAR            shift and go to state 14
    NAME            shift and go to state 13

    var                            shift and go to state 25
    varlist                        shift and go to state 26

state 20

    (80) declaration -> TYPE varlist SEMICOLON .

    IF              reduce using rule 80 (declaration -> TYPE varlist SEMICOLON .)
    WHILE           reduce using rule 80 (declaration -> TYPE varlist SEMICOLON .)
    NAME            reduce using rule 80 (declaration -> TYPE varlist SEMICOLON .)
    STAR            reduce using rule 80 (declaration -> TYPE varlist SEMICOLON .)
    INT             reduce using rule 80 (declaration -> TYPE varlist SEMICOLON .)
    FLOAT           reduce using rule 80 (declaration -> TYPE varlist SEMICOLON .)
    RCURLY          reduce using rule 80 (declaration -> TYPE varlist SEMICOLON .)
    RETURN          reduce using rule 80 (declaration -> TYPE varlist SEMICOLON .)
    ELSE            reduce using rule 80 (declaration -> TYPE varlist SEMICOLON .)
    VOID            reduce using rule 80 (declaration -> TYPE varlist SEMICOLON .)
    $end            reduce using rule 80 (declaration -> TYPE varlist SEMICOLON .)


state 21

    (83) var -> STAR var .

    COMMA           reduce using rule 83 (var -> STAR var .)
    LPAREN          reduce using rule 83 (var -> STAR var .)
    SEMICOLON       reduce using rule 83 (var -> STAR var .)
    RPAREN          reduce using rule 83 (var -> STAR var .)


state 22

    (8) function -> VOID NAME seen_FM . LPAREN parameter_list RPAREN function_body
    (10) function -> VOID NAME seen_FM . LPAREN RPAREN function_body
    (15) function_prototype -> VOID NAME seen_FM . LPAREN parameter_list RPAREN SEMICOLON
    (16) function_prototype -> VOID NAME seen_FM . LPAREN RPAREN SEMICOLON

    LPAREN          shift and go to state 27


state 23

    (11) function -> VOID MAIN seen_FM . LPAREN RPAREN function_body

    LPAREN          shift and go to state 28


state 24

    (7) function -> TYPE var seen_FM LPAREN . parameter_list RPAREN function_body
    (9) function -> TYPE var seen_FM LPAREN . RPAREN function_body
    (13) function_prototype -> TYPE var seen_FM LPAREN . parameter_list RPAREN SEMICOLON
    (14) function_prototype -> TYPE var seen_FM LPAREN . RPAREN SEMICOLON
    (17) parameter_list -> . TYPE var COMMA parameter_list
    (18) parameter_list -> . TYPE var
    (19) TYPE -> . INT
    (20) TYPE -> . FLOAT

    RPAREN          shift and go to state 30
    INT             shift and go to state 4
    FLOAT           shift and go to state 8

    parameter_list                 shift and go to state 31
    TYPE                           shift and go to state 29

state 25

    (81) varlist -> var . COMMA varlist
    (82) varlist -> var .

    COMMA           shift and go to state 19
    SEMICOLON       reduce using rule 82 (varlist -> var .)


state 26

    (81) varlist -> var COMMA varlist .

    SEMICOLON       reduce using rule 81 (varlist -> var COMMA varlist .)


state 27

    (8) function -> VOID NAME seen_FM LPAREN . parameter_list RPAREN function_body
    (10) function -> VOID NAME seen_FM LPAREN . RPAREN function_body
    (15) function_prototype -> VOID NAME seen_FM LPAREN . parameter_list RPAREN SEMICOLON
    (16) function_prototype -> VOID NAME seen_FM LPAREN . RPAREN SEMICOLON
    (17) parameter_list -> . TYPE var COMMA parameter_list
    (18) parameter_list -> . TYPE var
    (19) TYPE -> . INT
    (20) TYPE -> . FLOAT

    RPAREN          shift and go to state 32
    INT             shift and go to state 4
    FLOAT           shift and go to state 8

    parameter_list                 shift and go to state 33
    TYPE                           shift and go to state 29

state 28

    (11) function -> VOID MAIN seen_FM LPAREN . RPAREN function_body

    RPAREN          shift and go to state 34


state 29

    (17) parameter_list -> TYPE . var COMMA parameter_list
    (18) parameter_list -> TYPE . var
    (83) var -> . STAR var
    (84) var -> . NAME

    STAR            shift and go to state 14
    NAME            shift and go to state 13

    var                            shift and go to state 35

state 30

    (9) function -> TYPE var seen_FM LPAREN RPAREN . function_body
    (14) function_prototype -> TYPE var seen_FM LPAREN RPAREN . SEMICOLON
    (21) function_body -> . LCURLY stmt_list return_stmt RCURLY
    (22) function_body -> . LCURLY return_stmt RCURLY
    (23) function_body -> . body
    (26) body -> . LCURLY stmt_list RCURLY
    (27) body -> . LCURLY RCURLY

    SEMICOLON       shift and go to state 36
    LCURLY          shift and go to state 39

    body                           shift and go to state 38
    function_body                  shift and go to state 37

state 31

    (7) function -> TYPE var seen_FM LPAREN parameter_list . RPAREN function_body
    (13) function_prototype -> TYPE var seen_FM LPAREN parameter_list . RPAREN SEMICOLON

    RPAREN          shift and go to state 40


state 32

    (10) function -> VOID NAME seen_FM LPAREN RPAREN . function_body
    (16) function_prototype -> VOID NAME seen_FM LPAREN RPAREN . SEMICOLON
    (21) function_body -> . LCURLY stmt_list return_stmt RCURLY
    (22) function_body -> . LCURLY return_stmt RCURLY
    (23) function_body -> . body
    (26) body -> . LCURLY stmt_list RCURLY
    (27) body -> . LCURLY RCURLY

    SEMICOLON       shift and go to state 41
    LCURLY          shift and go to state 39

    function_body                  shift and go to state 42
    body                           shift and go to state 38

state 33

    (8) function -> VOID NAME seen_FM LPAREN parameter_list . RPAREN function_body
    (15) function_prototype -> VOID NAME seen_FM LPAREN parameter_list . RPAREN SEMICOLON

    RPAREN          shift and go to state 43


state 34

    (11) function -> VOID MAIN seen_FM LPAREN RPAREN . function_body
    (21) function_body -> . LCURLY stmt_list return_stmt RCURLY
    (22) function_body -> . LCURLY return_stmt RCURLY
    (23) function_body -> . body
    (26) body -> . LCURLY stmt_list RCURLY
    (27) body -> . LCURLY RCURLY

    LCURLY          shift and go to state 39

    function_body                  shift and go to state 44
    body                           shift and go to state 38

state 35

    (17) parameter_list -> TYPE var . COMMA parameter_list
    (18) parameter_list -> TYPE var .

    COMMA           shift and go to state 45
    RPAREN          reduce using rule 18 (parameter_list -> TYPE var .)


state 36

    (14) function_prototype -> TYPE var seen_FM LPAREN RPAREN SEMICOLON .

    VOID            reduce using rule 14 (function_prototype -> TYPE var seen_FM LPAREN RPAREN SEMICOLON .)
    INT             reduce using rule 14 (function_prototype -> TYPE var seen_FM LPAREN RPAREN SEMICOLON .)
    FLOAT           reduce using rule 14 (function_prototype -> TYPE var seen_FM LPAREN RPAREN SEMICOLON .)
    $end            reduce using rule 14 (function_prototype -> TYPE var seen_FM LPAREN RPAREN SEMICOLON .)


state 37

    (9) function -> TYPE var seen_FM LPAREN RPAREN function_body .

    VOID            reduce using rule 9 (function -> TYPE var seen_FM LPAREN RPAREN function_body .)
    INT             reduce using rule 9 (function -> TYPE var seen_FM LPAREN RPAREN function_body .)
    FLOAT           reduce using rule 9 (function -> TYPE var seen_FM LPAREN RPAREN function_body .)
    $end            reduce using rule 9 (function -> TYPE var seen_FM LPAREN RPAREN function_body .)


state 38

    (23) function_body -> body .

    VOID            reduce using rule 23 (function_body -> body .)
    INT             reduce using rule 23 (function_body -> body .)
    FLOAT           reduce using rule 23 (function_body -> body .)
    $end            reduce using rule 23 (function_body -> body .)


state 39

    (21) function_body -> LCURLY . stmt_list return_stmt RCURLY
    (22) function_body -> LCURLY . return_stmt RCURLY
    (26) body -> LCURLY . stmt_list RCURLY
    (27) body -> LCURLY . RCURLY
    (28) stmt_list -> . stmt stmt_list
    (29) stmt_list -> . stmt
    (24) return_stmt -> . RETURN SEMICOLON
    (25) return_stmt -> . RETURN R2 SEMICOLON
    (30) stmt -> . matched_stmt
    (31) stmt -> . unmatched_stmt
    (32) matched_stmt -> . assign
    (33) matched_stmt -> . declaration
    (34) matched_stmt -> . matched_decision
    (35) matched_stmt -> . matched_loop
    (36) matched_stmt -> . function_call SEMICOLON
    (37) unmatched_stmt -> . unmatched_decision
    (38) unmatched_stmt -> . unmatched_loop
    (39) assign -> . L1 EQUALS R1 SEMICOLON
    (40) assign -> . L2 EQUALS R2 SEMICOLON
    (80) declaration -> . TYPE varlist SEMICOLON
    (99) matched_decision -> . IF LPAREN condition RPAREN matched_stmt ELSE matched_stmt
    (100) matched_decision -> . IF LPAREN condition RPAREN matched_stmt ELSE body
    (101) matched_decision -> . IF LPAREN condition RPAREN body ELSE matched_stmt
    (102) matched_decision -> . IF LPAREN condition RPAREN body ELSE body
    (103) matched_decision -> . IF LPAREN condition RPAREN matched_stmt ELSE SEMICOLON
    (104) matched_decision -> . IF LPAREN condition RPAREN body ELSE SEMICOLON
    (105) matched_decision -> . IF LPAREN condition RPAREN SEMICOLON ELSE matched_stmt
    (106) matched_decision -> . IF LPAREN condition RPAREN SEMICOLON ELSE body
    (107) matched_decision -> . IF LPAREN condition RPAREN SEMICOLON ELSE SEMICOLON
    (85) matched_loop -> . WHILE LPAREN condition RPAREN matched_stmt
    (86) matched_loop -> . WHILE LPAREN condition RPAREN body
    (87) matched_loop -> . WHILE LPAREN condition RPAREN SEMICOLON
    (76) function_call -> . NAME LPAREN arg_list RPAREN
    (77) function_call -> . NAME LPAREN RPAREN
    (108) unmatched_decision -> . IF LPAREN condition RPAREN stmt
    (109) unmatched_decision -> . IF LPAREN condition RPAREN body
    (110) unmatched_decision -> . IF LPAREN condition RPAREN SEMICOLON
    (111) unmatched_decision -> . IF LPAREN condition RPAREN matched_stmt ELSE unmatched_stmt
    (112) unmatched_decision -> . IF LPAREN condition RPAREN body ELSE unmatched_stmt
    (113) unmatched_decision -> . IF LPAREN condition RPAREN SEMICOLON ELSE unmatched_stmt
    (88) unmatched_loop -> . WHILE LPAREN condition RPAREN unmatched_stmt
    (41) L1 -> . NAME
    (61) L2 -> . STAR L2
    (62) L2 -> . STAR NAME
    (19) TYPE -> . INT
    (20) TYPE -> . FLOAT

    RCURLY          shift and go to state 61
    RETURN          shift and go to state 60
    IF              shift and go to state 54
    WHILE           shift and go to state 53
    NAME            shift and go to state 65
    STAR            shift and go to state 50
    INT             shift and go to state 4
    FLOAT           shift and go to state 8

    stmt_list                      shift and go to state 59
    matched_loop                   shift and go to state 47
    TYPE                           shift and go to state 48
    return_stmt                    shift and go to state 49
    assign                         shift and go to state 46
    unmatched_decision             shift and go to state 51
    function_call                  shift and go to state 63
    L1                             shift and go to state 52
    L2                             shift and go to state 62
    declaration                    shift and go to state 55
    matched_stmt                   shift and go to state 56
    stmt                           shift and go to state 66
    unmatched_stmt                 shift and go to state 57
    matched_decision               shift and go to state 64
    unmatched_loop                 shift and go to state 58

state 40

    (7) function -> TYPE var seen_FM LPAREN parameter_list RPAREN . function_body
    (13) function_prototype -> TYPE var seen_FM LPAREN parameter_list RPAREN . SEMICOLON
    (21) function_body -> . LCURLY stmt_list return_stmt RCURLY
    (22) function_body -> . LCURLY return_stmt RCURLY
    (23) function_body -> . body
    (26) body -> . LCURLY stmt_list RCURLY
    (27) body -> . LCURLY RCURLY

    SEMICOLON       shift and go to state 67
    LCURLY          shift and go to state 39

    function_body                  shift and go to state 68
    body                           shift and go to state 38

state 41

    (16) function_prototype -> VOID NAME seen_FM LPAREN RPAREN SEMICOLON .

    VOID            reduce using rule 16 (function_prototype -> VOID NAME seen_FM LPAREN RPAREN SEMICOLON .)
    INT             reduce using rule 16 (function_prototype -> VOID NAME seen_FM LPAREN RPAREN SEMICOLON .)
    FLOAT           reduce using rule 16 (function_prototype -> VOID NAME seen_FM LPAREN RPAREN SEMICOLON .)
    $end            reduce using rule 16 (function_prototype -> VOID NAME seen_FM LPAREN RPAREN SEMICOLON .)


state 42

    (10) function -> VOID NAME seen_FM LPAREN RPAREN function_body .

    VOID            reduce using rule 10 (function -> VOID NAME seen_FM LPAREN RPAREN function_body .)
    INT             reduce using rule 10 (function -> VOID NAME seen_FM LPAREN RPAREN function_body .)
    FLOAT           reduce using rule 10 (function -> VOID NAME seen_FM LPAREN RPAREN function_body .)
    $end            reduce using rule 10 (function -> VOID NAME seen_FM LPAREN RPAREN function_body .)


state 43

    (8) function -> VOID NAME seen_FM LPAREN parameter_list RPAREN . function_body
    (15) function_prototype -> VOID NAME seen_FM LPAREN parameter_list RPAREN . SEMICOLON
    (21) function_body -> . LCURLY stmt_list return_stmt RCURLY
    (22) function_body -> . LCURLY return_stmt RCURLY
    (23) function_body -> . body
    (26) body -> . LCURLY stmt_list RCURLY
    (27) body -> . LCURLY RCURLY

    SEMICOLON       shift and go to state 69
    LCURLY          shift and go to state 39

    function_body                  shift and go to state 70
    body                           shift and go to state 38

state 44

    (11) function -> VOID MAIN seen_FM LPAREN RPAREN function_body .

    VOID            reduce using rule 11 (function -> VOID MAIN seen_FM LPAREN RPAREN function_body .)
    INT             reduce using rule 11 (function -> VOID MAIN seen_FM LPAREN RPAREN function_body .)
    FLOAT           reduce using rule 11 (function -> VOID MAIN seen_FM LPAREN RPAREN function_body .)
    $end            reduce using rule 11 (function -> VOID MAIN seen_FM LPAREN RPAREN function_body .)


state 45

    (17) parameter_list -> TYPE var COMMA . parameter_list
    (17) parameter_list -> . TYPE var COMMA parameter_list
    (18) parameter_list -> . TYPE var
    (19) TYPE -> . INT
    (20) TYPE -> . FLOAT

    INT             shift and go to state 4
    FLOAT           shift and go to state 8

    parameter_list                 shift and go to state 71
    TYPE                           shift and go to state 29

state 46

    (32) matched_stmt -> assign .

    IF              reduce using rule 32 (matched_stmt -> assign .)
    WHILE           reduce using rule 32 (matched_stmt -> assign .)
    NAME            reduce using rule 32 (matched_stmt -> assign .)
    STAR            reduce using rule 32 (matched_stmt -> assign .)
    INT             reduce using rule 32 (matched_stmt -> assign .)
    FLOAT           reduce using rule 32 (matched_stmt -> assign .)
    RCURLY          reduce using rule 32 (matched_stmt -> assign .)
    RETURN          reduce using rule 32 (matched_stmt -> assign .)
    ELSE            reduce using rule 32 (matched_stmt -> assign .)


state 47

    (35) matched_stmt -> matched_loop .

    IF              reduce using rule 35 (matched_stmt -> matched_loop .)
    WHILE           reduce using rule 35 (matched_stmt -> matched_loop .)
    NAME            reduce using rule 35 (matched_stmt -> matched_loop .)
    STAR            reduce using rule 35 (matched_stmt -> matched_loop .)
    INT             reduce using rule 35 (matched_stmt -> matched_loop .)
    FLOAT           reduce using rule 35 (matched_stmt -> matched_loop .)
    RCURLY          reduce using rule 35 (matched_stmt -> matched_loop .)
    RETURN          reduce using rule 35 (matched_stmt -> matched_loop .)
    ELSE            reduce using rule 35 (matched_stmt -> matched_loop .)


state 48
